tests/golden/type_errors/map_bad_annotation_key.cd
struct Point { x: number }
let values: map<Point, string> = {};
