tests/golden/type_errors/map_bad_annotation_key.err
Type error at 2:13: map key must be nil, number, bool, or string
  let values: map<Point, string> = {};
              ^
